Tangent shader node & subdivision surface crashes blender #96224

Closed
opened 2022-03-07 18:11:31 +01:00 by Antoine · 10 comments

System Information
Operating system: windows 11
Graphics Card: NVIDIA GeForce RTX 2060 SUPER
Processor: 12th Gen Intel(R) Core(TM) i5-12600K, 3686 Mhz, 10 Core(s), 16 Logical Processor(s)

Blender Version
Crash to desktop: 3.1.0 Candidate (7th and 3rd of march builds)
Bugged display but no crash: 3.1.0 Beta (27th feb build and older)
Worked: Blender 3.0.0

Short description of error
Using a shader with the Tangent node set to UV map mode, together with a subdiv surface modifier and setting the object to shade smooth immediatly crashes blender.

Exact steps for others to reproduce the error

  1. set viewport to shaded
  2. on default cube assign a shader that uses the Tangent node
  3. set the Tangent node to UV map mode and pick the default UV
  4. set the cube to shade smooth
  5. add a subdivision modifier to the cube

capture.png

**System Information** Operating system: windows 11 Graphics Card: NVIDIA GeForce RTX 2060 SUPER Processor: 12th Gen Intel(R) Core(TM) i5-12600K, 3686 Mhz, 10 Core(s), 16 Logical Processor(s) **Blender Version** Crash to desktop: 3.1.0 Candidate (7th and 3rd of march builds) Bugged display but no crash: 3.1.0 Beta (27th feb build and older) Worked: Blender 3.0.0 **Short description of error** Using a shader with the Tangent node set to UV map mode, together with a subdiv surface modifier and setting the object to shade smooth immediatly crashes blender. **Exact steps for others to reproduce the error** 1. set viewport to shaded 2. on default cube assign a shader that uses the Tangent node 3. set the Tangent node to UV map mode and pick the default UV 4. set the cube to shade smooth 5. add a subdivision modifier to the cube ![capture.png](https://archive.blender.org/developer/F12901073/capture.png)
Author

Added subscriber: @AntoineP

Added subscriber: @AntoineP

Added subscriber: @Ethan-Hall

Added subscriber: @Ethan-Hall

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm. Occurs only with Viewport GPU Subdivision enabled.
GPU_Subdiv_Crash_Tangent_Node.crash.txt

Can confirm. Occurs only with Viewport GPU Subdivision enabled. [GPU_Subdiv_Crash_Tangent_Node.crash.txt](https://archive.blender.org/developer/F12901440/GPU_Subdiv_Crash_Tangent_Node.crash.txt)

Test file:
GPU_Subdiv_Crash_Tangent_Node.blend

  1. Make sure Viewport GPU Subdivision is enabled.
  2. Enable the Subdivision modifier in the viewport.
Test file: [GPU_Subdiv_Crash_Tangent_Node.blend](https://archive.blender.org/developer/F12901447/GPU_Subdiv_Crash_Tangent_Node.blend) 1. Make sure Viewport GPU Subdivision is enabled. 2. Enable the Subdivision modifier in the viewport.

Added subscribers: @kevindietrich, @ThomasDinges

Added subscribers: @kevindietrich, @ThomasDinges

@kevindietrich Hey, can you check please?

@kevindietrich Hey, can you check please?
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by d5e4cab76c

This issue was referenced by d5e4cab76c625c45b73868cf27021de1fada2830

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-03-08 13:47:52 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96224
No description provided.